@@ -24,7 +24,7 @@
  * Contributor(s):
  *
  * The Original Software is NetBeans. The Initial Developer of the Original
- * Software is Sun Microsystems, Inc. Portions Copyright 1997-2007 Sun
+ * Software is Sun Microsystems, Inc. Portions Copyright 1997-2008 Sun
  * Microsystems, Inc. All Rights Reserved.
  *
  * If you wish your version of this file to be governed by only the CDDL
@@ -43,11 +43,11 @@
 package org.netbeans.modules.i18n.wizard;
 
 
+import java.awt.CardLayout;
 import java.awt.Component;
 import java.awt.Container;
 import java.awt.Dialog;
-import java.awt.GridBagConstraints;
-import java.awt.GridBagLayout;
+import java.awt.EventQueue;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.awt.event.MouseEvent;
@@ -79,11 +79,13 @@ import org.netbeans.modules.i18n.I18nUtil;
 import org.netbeans.modules.i18n.PropertyPanel;
 
 import org.openide.DialogDescriptor;
+import org.openide.WizardValidationException;
 import org.openide.loaders.DataObject;
 import org.openide.util.HelpCtx;
 import org.openide.util.NbBundle;
 import org.openide.WizardDescriptor;
 import org.openide.DialogDisplayer;
+import org.openide.WizardDescriptor.AsynchronousValidatingPanel;
 
 
 /**
@@ -526,20 +528,24 @@ final class TestStringWizardPanel extends JPanel {
      * @see org.openide.WizardDescriptor.Panel*/
     public static class Panel extends I18nWizardDescriptor.Panel
                               implements WizardDescriptor.FinishablePanel<I18nWizardDescriptor.Settings>,
-                                         I18nWizardDescriptor.ProgressMonitor {
+                                         AsynchronousValidatingPanel<I18nWizardDescriptor.Settings> {
+
+        private static final String CARD_GUI = "gui";                   //NOI18N
+        private static final String CARD_MSG = "msg";                   //NOI18N
+        private static final String CARD_REPLACING = "replacing";       //NOI18N
 
         /** Empty label component. */
-        private final JLabel emptyLabel;        
+        private JLabel emptyLabel;        
 
         /** Test wizard panel component. */
         private transient TestStringWizardPanel testStringPanel;
         
+        /** Indicates whether this panel is used in i18n test wizard or not. */
+        private volatile boolean hasFoundStrings;
+        /** */
+        private volatile ProgressWizardPanel progressPanel;
+
         public Panel() {            
-            emptyLabel = new JLabel(
-                    NbBundle.getMessage(TestStringWizardPanel.class,
-                                        "TXT_AllI18nStrings"));         //NOI18N
-            emptyLabel.setHorizontalAlignment(JLabel.CENTER);
-            emptyLabel.setVerticalAlignment(JLabel.CENTER);            
         }
         
 
@@ -547,24 +553,18 @@ final class TestStringWizardPanel extends JPanel {
         /** Gets component to display. Implements superclass abstract method. 
          * @return this instance */
         protected Component createComponent() {
-            JPanel panel = new JPanel();
+            JPanel panel = new JPanel(new CardLayout());
             panel.getAccessibleContext().setAccessibleDescription(
                     NbBundle.getMessage(
                             TestStringWizardPanel.class,
                             "ACS_TestStringWizardPanel"));              //NOI18N
             
             panel.putClientProperty("WizardPanel_contentSelectedIndex", //NOI18N
-                                    new Integer(2));
+                                    Integer.valueOf(2));
             panel.setName(
                     NbBundle.getMessage(TestStringWizardPanel.class,
                                         "TXT_FoundMissingResource"));   //NOI18N
             panel.setPreferredSize(I18nWizardDescriptor.PREFERRED_DIMENSION);                    
-            panel.setLayout(new GridBagLayout());
-            GridBagConstraints constraints = new GridBagConstraints();
-            constraints.weightx = 1.0;
-            constraints.weighty = 1.0;
-            constraints.fill = GridBagConstraints.BOTH;
-            panel.add(getUI(), constraints);
             return panel;
         }
 
@@ -586,25 +586,15 @@ final class TestStringWizardPanel extends JPanel {
 	    super.readSettings(settings);
             getUI().setSourceMap(getMap());
             
+            hasFoundStrings = foundStrings(getMap());
+
             JPanel panel = (JPanel)getComponent();
-            if (foundStrings(getMap())) {
-                if (panel.isAncestorOf(emptyLabel)) {
-                    panel.remove(emptyLabel);
-                    GridBagConstraints constraints = new GridBagConstraints();
-                    constraints.weightx = 1.0;
-                    constraints.weighty = 1.0;
-                    constraints.fill = GridBagConstraints.BOTH;
-                    panel.add(getUI(), constraints);
-                }
+            if (hasFoundStrings) {
+                panel.add(getUI(), CARD_GUI);
+                ((CardLayout) panel.getLayout()).show(panel, CARD_GUI);
             } else {
-                if (panel.isAncestorOf(getUI())) {
-                    panel.remove(getUI());
-                    GridBagConstraints constraints = new GridBagConstraints();
-                    constraints.weightx = 1.0;
-                    constraints.weighty = 1.0;
-                    constraints.fill = GridBagConstraints.BOTH;
-                    panel.add(emptyLabel, constraints);
-                }
+                panel.add(getMessageComp(), CARD_MSG);
+                ((CardLayout) panel.getLayout()).show(panel, CARD_MSG);
             }
         }
         
@@ -616,27 +606,27 @@ final class TestStringWizardPanel extends JPanel {
             getMap().clear();
             getMap().putAll(getUI().getSourceMap());
         }
-        
-        /** Searches hard coded strings in sources and puts found hard coded string - i18n string pairs
-         * into settings. Implements <code>ProgressMonitor</code> interface method. */
-        public void doLongTimeChanges() {
-            if (foundStrings(getMap())) {
-                // Replace panel.
-                final ProgressWizardPanel progressPanel = new ProgressWizardPanel(true);
+
+        public void prepareValidation() {
+            assert EventQueue.isDispatchThread();
+            if (hasFoundStrings) {
+                progressPanel = new ProgressWizardPanel(true);
                 progressPanel.setMainText(
                         NbBundle.getMessage(getClass(),
                                             "LBL_Internationalizing")); //NOI18N
                 progressPanel.setMainProgress(0);
 
-                ((Container)getComponent()).remove(getUI());
-                GridBagConstraints constraints = new GridBagConstraints();
-                constraints.weightx = 1.0;
-                constraints.weighty = 1.0;
-                constraints.fill = GridBagConstraints.BOTH;
-                ((Container) getComponent()).add(progressPanel, constraints);
-                ((JComponent) getComponent()).revalidate();
-                getComponent().repaint();
+                Container container = (Container) getComponent();
+                container.add(progressPanel, CARD_REPLACING);
+                ((CardLayout) container.getLayout()).show(container, CARD_REPLACING);
+            }
+        }
 
+        /** Searches hard coded strings in sources and puts found hard coded string - i18n string pairs
+         * into settings. Implements <code>ProgressMonitor</code> interface method. */
+        public void validate() throws WizardValidationException {
+            assert !EventQueue.isDispatchThread();
+            if (hasFoundStrings) {
                 // Add missing key-value pairs into resource.
                 Map<DataObject,SourceData> sourceMap = getUI().getSourceMap();
 
@@ -707,10 +697,6 @@ final class TestStringWizardPanel extends JPanel {
             } // if (foundStrings(getMap()))
         }
         
-        /** Implements <code>ProgressMonitor</code> interface method. Does nothing. */
-        public void reset() {
-        }
-
         /** Indicates if there were found some hardcoded strings in any of selected sources. 
          * @return true if at least one hard coded string was found. */
         private static boolean foundStrings(Map<DataObject,SourceData> sourceMap) {
@@ -733,5 +719,17 @@ final class TestStringWizardPanel extends JPanel {
             }
             return testStringPanel;
         }
+
+        private JComponent getMessageComp() {
+            if (emptyLabel == null) {
+                emptyLabel = new JLabel(
+                        NbBundle.getMessage(TestStringWizardPanel.class,
+                                            "TXT_AllI18nStrings"));         //NOI18N
+                emptyLabel.setHorizontalAlignment(JLabel.CENTER);
+                emptyLabel.setVerticalAlignment(JLabel.CENTER);            
+            }
+            return emptyLabel;
+        }
+
     } // End of nested PanelDescriptor class.
 }
